[gd_scene load_steps=4 format=3 uid="uid://boes6apjjemp5"]

[ext_resource type="Script" path="res://power_up.gd" id="1_svubs"]
[ext_resource type="Texture2D" uid="uid://cvd42vrmcieef" path="res://art/crate.png" id="2_17b4k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_120bn"]
size = Vector2(38, 38)

[node name="PowerUp" type="Area2D"]
script = ExtResource("1_svubs")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.156, 0.156)
texture = ExtResource("2_17b4k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_120bn")

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4.76837e-07, 4.76837e-07)
scale = Vector2(1.9, 1.9)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
